--- a/css/styles.css
+++ b/css/styles.css
@@ -988,7 +988,7 @@ input {
   color: #111;
   background-color: transparent;
   border: none;
-  transition: color 300ms ease-in;
+  transition: color 500ms ease-in;
 }
 
 .modal-button-icon:hover,
@@ -1044,10 +1044,15 @@ input {
   font-size: 18px;
   letter-spacing: -0.02em;
   color: #404040;
+  transition: border-color 300ms ease-in;
 }
 
 .modal-message::placeholder {
   color: rgba(64, 64, 64, 0.3);
+}
+
+.modal-message:focus {
+  border: 1.5px solid #fd9222;
 }
 
 .modal-field-input {
@@ -1058,9 +1063,14 @@ input {
   background: transparent;
   outline: transparent;
   border-radius: 13px;
-  border: 1.5px solid #fd9222;
   box-shadow: 0 5px 5px 0 rgba(0, 0, 0, 0.03);
+  transition: border-color 300ms ease-in;
 }
+
+.modal-field-input:focus {
+  border: 1.5px solid #fd9222;
+}
+
 .modal-field-icon {
   position: absolute;
   top: 50%;
@@ -1068,14 +1078,68 @@ input {
   transform: translateY(-50%);
   stroke: #404040;
   fill: transparent;
+  transition: fill 300ms ease-in, stroke 300ms ease-in;
 }
 
-.modal-field-icon.orange {
+.modal-field-input:focus + .modal-field-icon {
   fill: transparent;
   stroke: #fd9222;
 }
 
-.agreement {
+/* start Valid Form */
+
+.modal-valid-icon {
+  position: absolute;
+  top: 50%;
+  right: 24px;
+  transform: translateY(-50%);
+}
+
+.error,
+.success {
+  opacity: 0;
+  transform: scale(0.3);
+  transform-origin: center;
+  transition: 200ms ease-in;
+  transition-property: opacity, transform;
+}
+
+.modal-field-input:not(:placeholder-shown):valid:required
+  ~ .modal-valid-icon
+  > .success {
+  opacity: 1;
+  transform: scale(1);
+}
+
+.modal-field-input:not(:placeholder-shown):invalid:required
+  ~ .modal-valid-icon
+  > .error {
+  opacity: 1;
+  transform: scale(1);
+}
+
+.error-text {
+  position: absolute;
+  bottom: -18px;
+  left: 50%;
+  transform: translateX(-50%) scale(0.3);
+  width: 100%;
+  font-size: 12px;
+  color: #e51f1f;
+  text-align: center;
+  opacity: 0;
+  transition: 200ms ease-in;
+  transition-property: transform, opacity;
+}
+
+.modal-field-input:not(:placeholder-shown):invalid:required ~ .error-text {
+  opacity: 1;
+  transform: translateX(-50%) scale(1);
+}
+
+/* end Valid Form */
+
+.agreement-box {
   display: flex;
   align-items: center;
   margin-bottom: 40px;
@@ -1104,6 +1168,12 @@ input {
   margin-right: 12px;
   margin-bottom: 40px;
   background-color: transparent;
+  transition: 300ms ease-in;
+  transition-duration: background-color, border;
+}
+
+input[type="checkbox"]:focus-visible + .agreement-label .agreement-checkbox {
+  box-shadow: 0 0 0 6px rgba(253, 146, 34, 0.25);
 }
 
 .agreement-checkbox-icon {
