--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,7 @@
+.hide {
+  display: none;
+}
+
 /* #region Base styles */
 body {
   color: #111;
@@ -65,6 +69,30 @@ input {
   clip-path: inset(100%);
   clip: rect(0 0 0 0);
   overflow: hidden;
+}
+
+.container {
+  /* width: 1168px;
+  padding: 0 16px;
+  margin: 0 auto; */
+
+  min-width: 320px;
+  max-width: 375px;
+  padding: 0 20px;
+  margin: 0 auto;
+}
+
+@media screen and (min-width: 768px) {
+  .container {
+    max-width: 736px;
+    padding: 0 16px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .container {
+    max-width: 1168px;
+  }
 }
 
 .logo {
@@ -135,12 +163,6 @@ input {
 .btn-dark:focus {
   color: #fff;
   background: #fd9222;
-}
-
-.container {
-  width: 1168px;
-  padding: 0 16px;
-  margin: 0 auto;
 }
 
 /* #endregion */
@@ -345,7 +367,14 @@ input {
 /* #region Benefits*/
 .benefits {
   background: #1e1823;
-  padding: 50px;
+  /* padding: 50px; */
+  padding: 20px 0;
+}
+
+@media only screen and (min-width: 768px) {
+  .benefits {
+    padding: 50px 0;
+  }
 }
 
 .benefits .container {
@@ -354,27 +383,46 @@ input {
 
 .benefits-list {
   display: flex;
-  justify-content: center;
-  gap: 88px;
+  flex-direction: column;
+  /* justify-content: center; */
+  /* gap: 88px; */
+  gap: 20px;
 }
+
+@media only screen and (min-width: 768px) {
+  .benefits-list {
+    flex-direction: row;
+    flex-wrap: wrap;
+    gap: 44px 88px;
+  }
+}
+
 .benefits-item {
   position: relative;
-  max-width: 308px;
+  /* max-width: 308px; */
 }
 
-.benefits-item:not(:last-child)::after {
-  content: "";
+@media only screen and (min-width: 768px) {
+  .benefits-item {
+    max-width: 308px;
+  }
+}
 
-  position: absolute;
-  top: 50%;
-  right: -45px;
+@media only screen and (min-width: 1200px) {
+  .benefits-item:not(:last-child)::after {
+    content: "";
 
-  transform: translateY(-50%);
+    position: absolute;
+    top: 50%;
+    right: -45px;
 
-  display: block;
-  border: 1px solid rgba(255, 255, 255, 0.5);
-  width: 1px;
-  height: 124px;
+    transform: translateY(-50%);
+
+    display: block;
+    border: 1px solid rgba(255, 255, 255, 0.5);
+    width: 1px;
+    height: 124px;
+  }
 }
 
 .benefits-wrapper {
@@ -807,8 +855,19 @@ input {
 /* #region Footer*/
 .footer {
   background-color: #1e1823;
-  padding: 50px;
+  padding: 32px 0;
 }
+
+@media only screen and (min-width: 768px) {
+  .footer {
+    padding: 50px 0;
+  }
+}
+
+/* @media only screen and (min-width: 1200px) {
+  .footer {
+  }
+} */
 
 .footer .container {
   display: flex;
@@ -817,18 +876,48 @@ input {
 
 .footer-cont {
   display: flex;
-  padding-bottom: 50px;
+  flex-direction: column;
+  gap: 32px;
+  padding-bottom: 32px;
   border-bottom: 1px solid #fff;
+}
+/* padding-bottom: 50px; */
+
+@media only screen and (min-width: 768px) {
+  .footer-cont {
+    flex-direction: row;
+    gap: 0;
+    padding-bottom: 50px;
+  }
+}
+
+@media only screen and (min-width: 1200px) {
+  .footer-cont {
+  }
 }
 
 .footer-title {
   width: 300px;
   margin: 0;
   font-weight: 500;
-  font-size: 28px;
-  line-height: 1.21;
+  font-size: 24px;
+  line-height: 1.17;
   letter-spacing: -0.02em;
   color: #fff;
+}
+
+@media only screen and (min-width: 768px) {
+  .footer-title {
+    font-size: 28px;
+    line-height: 1.21;
+    margin-right: 52px;
+  }
+}
+
+@media only screen and (min-width: 1200px) {
+  .footer-title {
+    margin: 0;
+  }
 }
 
 .footer-word {
@@ -836,8 +925,19 @@ input {
 }
 
 .footer-social-cont {
-  margin-left: auto;
-  margin-right: 50px;
+}
+
+@media only screen and (min-width: 768px) {
+  .footer-social-cont {
+    margin-right: 40px;
+  }
+}
+
+@media only screen and (min-width: 1200px) {
+  .footer-social-cont {
+    margin-left: auto;
+    margin-right: 50px;
+  }
 }
 
 .footer-address {
@@ -888,16 +988,55 @@ input {
 
 .footer-nav-cont {
   display: flex;
-  justify-content: space-between;
+  flex-direction: column;
+  /* justify-content: space-between; */
+}
+
+@media only screen and (min-width: 768px) {
+  .footer-nav-cont {
+    flex-direction: row;
+    padding-top: 24px;
+  }
 }
 
 .footer-nav {
   padding-top: 24px;
+  margin-bottom: 32px;
 }
+
+@media only screen and (min-width: 768px) {
+  .footer-nav {
+    padding-top: 0;
+    margin-bottom: 0;
+    margin-right: 32px;
+  }
+}
+
+@media only screen and (min-width: 1200px) {
+  .footer-nav {
+    margin-right: auto;
+  }
+}
+
 .footer-nav-list {
   display: flex;
-  gap: 24px;
+  flex-direction: column;
+  gap: 18px;
 }
+
+@media only screen and (min-width: 768px) {
+  .footer-nav-list {
+    flex-direction: row;
+    gap: 16px;
+  }
+}
+
+@media only screen and (min-width: 1200px) {
+  .footer-nav-list {
+    gap: 24px;
+  }
+}
+
 .footer-nav-item {
 }
 .footer-nav-link {
@@ -907,7 +1046,6 @@ input {
   line-height: 1.14286;
   letter-spacing: -0.02em;
   color: #fff;
-  padding: 18px 0;
 
   transition: 500ms ease-in;
   transition-property: color;
@@ -918,20 +1056,51 @@ input {
   color: #fd9222;
 }
 
+@media only screen and (min-width: 768px) {
+  .footer-nav-link {
+    padding: 14.5px 0;
+  }
+}
+
+@media only screen and (min-width: 1200px) {
+  .footer-nav-link {
+    padding: 18px 0;
+  }
+}
+
 .footer-subscribe {
   display: flex;
   gap: 14px;
-  padding-top: 24px;
+}
+
+@media only screen and (min-width: 768px) {
+  .footer-subscribe {
+    gap: 8px;
+  }
 }
 
 .footer-subscribe input {
   border: 1.5px solid rgba(255, 255, 255, 0.15);
   border-radius: 30px;
   padding: 13px 24px;
-  width: 313px;
-  height: 52px;
+  width: 100%;
+  height: 45px;
   background-color: transparent;
   color: #fff;
+  font-size: 14px;
+}
+
+@media only screen and (min-width: 768px) {
+  .footer-subscribe input {
+    width: 232px;
+  }
+}
+
+@media only screen and (min-width: 1200px) {
+  .footer-subscribe input {
+    height: 52px;
+    width: 313px;
+  }
 }
 
 .footer-button {
@@ -939,12 +1108,27 @@ input {
   justify-content: center;
   align-items: center;
   border-radius: 100px;
+  width: 120px;
+  height: 45px;
   padding: 17px 40px;
-  width: 137px;
-  height: 52px;
   background: #fd9222;
   color: #fff;
   border: none;
+  font-weight: 600;
+  font-size: 14px;
+}
+
+@media only screen and (min-width: 768px) {
+  .footer-button {
+    width: 128px;
+  }
+}
+
+@media only screen and (min-width: 1200px) {
+  .footer-button {
+    width: 137px;
+    height: 52px;
+  }
 }
 
 /* #endregion */
@@ -955,9 +1139,9 @@ input {
   inset: 0;
   background-color: rgba(46, 47, 66, 0.4);
 
-  /* opacity: 0;
+  opacity: 0;
   pointer-events: none;
-  visibility: hidden; */
+  visibility: hidden;
 
   transition: 500ms;
 }
