--- a/css/styles.css
+++ b/css/styles.css
@@ -263,6 +263,11 @@ input {
   margin-bottom: 80px;
 }
 
+@media only screen and (min-width: 768px) and (max-width: 1200px) {
+  .hero {
+  }
+}
+
 .hero .container {
   padding: 381px 40px 40px 40px;
   background-color: rgba(17, 17, 17, 0.4);
@@ -876,7 +881,6 @@ input {
   padding-bottom: 32px;
   border-bottom: 1px solid #fff;
 }
-/* padding-bottom: 50px; */
 
 @media only screen and (min-width: 768px) {
   .footer-cont {
@@ -984,7 +988,6 @@ input {
 .footer-nav-cont {
   display: flex;
   flex-direction: column;
-  /* justify-content: space-between; */
 }
 
 @media only screen and (min-width: 768px) {
@@ -1370,3 +1373,91 @@ input[type="checkbox"]:focus-visible + .agreement-label .agreement-checkbox {
 }
 
 /* #endregion Modal */
+
+/* #region Mobile Menu  */
+.mobile-menu {
+  position: fixed;
+  inset: 0;
+  background-color: rgba(46, 47, 66, 0.4);
+  backdrop-filter: blur(15px);
+
+  transition: 300ms ease-in;
+  transition-property: opacity;
+  opacity: 0;
+}
+
+@media only screen and (min-width: 768px) {
+  .mobile-menu {
+    display: none;
+  }
+}
+
+.mobile-menu .is-open {
+  opacity: 1;
+  transition-delay: 300ms;
+  transition-timing-function: ease-out;
+}
+
+.mobile-menu-wrapper {
+  display: flex;
+  flex-direction: column;
+  max-width: 220px;
+  width: 100%;
+  height: 100%;
+  margin-left: auto;
+  padding: 20px;
+  padding-top: 136px;
+  background: #1e1823;
+  /* transform: translateX(100%);
+  transition: 300ms ease-in;
+  transition-property: transform;
+  transition-delay: 300ms; */
+}
+
+.mobile-menu.is-open .mobile-menu-wrapper {
+  /* transform: translateX(0);
+  transition-timing-function: ease-out;
+  transition-delay: 0; */
+}
+
+.mobile-menu-button {
+  position: absolute;
+  top: 20px;
+  right: 20px;
+  padding: 0;
+  background: transparent;
+  border: none;
+}
+
+.mobile-menu-icon {
+  stroke: #fff;
+}
+.mobile-menu-list {
+  margin-bottom: auto;
+}
+.mobile-menu-item {
+}
+
+.mobile-menu-item:not(:last-child) {
+  margin-bottom: 24px;
+}
+
+.mobile-menu-link {
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 1.14;
+  letter-spacing: -0.02em;
+  color: #fff;
+  transition: 300ms;
+}
+
+@media not (hover: hover) {
+  .mobile-menu-link:active {
+    color: #fd9222;
+  }
+}
+
+.mobile-menu-socials {
+  display: flex;
+}
+/* #endregion  */
